tests/negative/neg_pr118b1_transitive_local_receive_contract.safe
-- Test: neg_pr118b1_transitive_local_receive_contract
-- Description: Task receives clauses apply through transitive local subprogram calls.
-- Expected: REJECT

package neg_pr118b1_transitive_local_receive_contract

   subtype message is integer (0 to 10)

   channel data_ch : message capacity 1
   channel allowed_ch : message capacity 1

   function pull_data

      var item : message = 0
      receive data_ch, item

   task worker with priority = 10, receives allowed_ch

      loop
         pull_data
